--- a/pages/brand-intro.html
+++ b/pages/brand-intro.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
+    <title>品牌故事頁</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
 
-    <main>我是首頁</main>
+    <main>我是品牌故事頁</main>
 
     <%- include('./layout/footer'); -%>
 
