--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <title>i產品詳情頁</title>
   </head>
   <body>
     <%- include('./layout/header'); -%>
-    <h1>我是about</h1>
+
+    <main>我是產品詳情頁</main>
+
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
