--- a/index.html
+++ b/index.html
@@ -1,21 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>index</title>
-    <script type="module" crossorigin src="/assignment-2/assets/main-C-CX89_S.js"></script>
-    <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-D_ReleUK.css">
-  </head>
-  <body>
-    <h1 class="header">header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
-    <h1 class="index-title">我是首頁</h1>
-    <img src="/assignment-2/assets/dog-C9XCfHyE.jpg" style="width: 300px;" alt="cat">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- 字型載入 -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<!-- 字型載入結束 -->
+<!-- icon 載入 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<!-- icon 載入結束 -->  <title>index</title>
+  <script type="module" crossorigin src="/assignment-2/assets/main-DPVfCV5-.js"></script>
+  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-CUsWb7u7.css">
+</head>
+<body>
+  <nav class="nav">
+    <div class="container">
+        <div class="row aic">
+            <section class="mr-auto col-10 d-flex aic">
+                <a href="index.html" class="mr-48 logo">
+                    <!-- logo 圖片 連結到首頁 index -->
+                    <img src="/assignment-2/assets/logo-RhEl2I3y.svg" alt="logo-image">
+                </a>
+                <ul class="d-flex nav-menu">
+                    <li class="mr-40"><a href="product-list.html">商品列表</a></li>
+                    <!-- 連結到 產品列表頁面 -->
+                    <li><a href="brand-intro.html">品牌故事</a></li>
+                    <!-- 連結到 品牌介紹頁面 -->
+                </ul>
+            </section>
+            <aside class="col-2 d-flex jce aic avatar">
+                <a href="#"><i class="bi bi-person"></i></a>
+                <!-- 連結到 登入頁面 -->
+            </aside>
+        </div>
+    </div>
+</nav>
+  <main>我是首頁</main>
 
-    <footer class="footer">footer</footer>
-  </body>
+  <section class="call-to-action">
+    <div class="d-flex jcc aic container">
+        <h4 class="mr-24">加入會員取得 9 折優惠</h4>
+        <a href="#" class="cta-btn">馬上註冊</a>
+    </div>
+</section>
+  <footer class="footer">
+    <div class="container">
+        <div class="footer-wrap">
+            <nav class="mb-24 footer-nav">
+                <section class="d-flex aic row">
+                    <a href="index.html" class="mr-auto col-10 logo">
+                    <!-- logo 圖片 連結到首頁 index -->
+                        <img src="/assignment-2/assets/logo-RhEl2I3y.svg" alt="logo-image">
+                    </a>
+                    <ul class="d-flex nav-menu">
+                        <li class="col-1 mr-40"><a href="product-list.html">商品列表</a></li>
+                        <!-- 連結到 產品列表頁面 -->
+                        <li class="col-1"><a href="brand-intro.html">品牌故事</a></li>
+                        <!-- 連結到 品牌介紹頁面 -->
+                    </ul>
+                </section>
+            </nav>
+            <footer class="footer-copyright">
+                <p class="mb-4">Copyright ©2025 URBNSTYLE</p>
+                <p>All Rights Reserved.</p>
+            </footer>
+        </div>
+    </div>
+</footer>
+</body>
 </html>
