--- a/pages/product-detail.html
+++ b/pages/product-detail.html
@@ -33,7 +33,7 @@
             <span class="mr-12 mr-md-8">/</span>
             <a class="mr-12 mr-md-8 breadcrumb-link" href="#">滑板鞋</a>
             <span class="mr-12 mr-md-8">/</span>
-            <a href="#">Platform 404</a>
+            <p>Platform 404</p>
           </nav>
           <h2 class="mb-16 mb-md-12">Platform 404</h2>
           <h5 class="mb-16 mb-md-12 d-flex aic">NT$2,600<span class="original-price">NT$3,200</span></h5>
