--- a/pages/product-list.html
+++ b/pages/product-list.html
@@ -16,7 +16,7 @@
       <span class="mr-12 mr-md-8">/</span>
       <a class="mr-12  mr-md-8 breadcrumb-link" href="/">女鞋</a>
       <span class="mr-12  mr-md-8">/</span>
-      <a href="#">所有商品</a>
+      <p>所有商品</p>
     </nav>
     <h3 class="mb-24 mb-md-12">所有商品</h3>
     <main class="row jcsb">
