--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,207 @@
 <body>
   <%- include("./layout/nav"); -%>
 
-  <main>我是首頁</main>
+  <div class="d-flex nav-link">
+    <a href="product-list.html">商品列表</a>
+    <a href="brand-intro.html">品牌故事</a>
+  </div>
+
+  <header class="banner-cta">
+    <div class="container container-index">
+      <div class="mb-16 mb-md-8 display-1">URBNSTEP</div>
+      <h3 class="mb-48 mb-md-32">Your Step, Your Statement</h3>
+      <a class="btn-large" href="#">立即選購</a>
+    </div>
+  </header>
+
+  <div class="container container-index">
+    <main>
+      <section class="py-64 py-md-40 new-arrival">
+        <div class="mb-12 mb-md-8 display-2">New Arrival</div>
+        <h2 class="mb-32 mb-md-24">新品上市</h2>
+        <ul class="d-flex product-card-wrap">
+          <li class="mb-40 mb-md-24 product-card">
+            <a href="">
+              <img class="mb-12 mb-md-8" src="/assets/images/desktop/new-1.png" alt="new-product">
+              <h5 class="mb-4 mb-md-0">Monoverse</h5>
+              <p>NT$3,600</p>
+            </a>
+          </li>
+          <li class="product-card">
+            <a href="">
+              <img class="mb-12 mb-md-8" src="/assets/images/desktop/new-2.png" alt="new-product">
+              <h5 class="mb-4 mb-md-0">PLATFORM 404</h5>
+              <p>NT$2,600</p>
+            </a>
+          </li><li class="product-card">
+            <a href="">
+              <img class="mb-12 mb-md-8" src="/assets/images/desktop/new-3.png" alt="new-product">
+              <h5 class="mb-4 mb-md-0">URBN Force</h5>
+              <p>NT$3,200</p>
+            </a>
+          </li><li class="product-card">
+            <a href="">
+              <img class="mb-12 mb-md-8" src="/assets/images/desktop/new-4.png" alt="new-product">
+              <h5 class="mb-4 mb-md-0">Mode90</h5>
+              <p>NT$4,000</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="py-64 py-md-40 best-sell">
+        <h2 class="mb-16">熱銷補貨</h2>
+        <ul class="d-flex tag-product-card-wrap">
+          <li class="tag-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-3.png" alt="best-sell-product">
+                <span>人氣 No.1</span>
+              </div>
+            </a>
+          </li>
+          <li class="tag-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product.png" alt="best-sell-product">
+                <span>人氣 No.1</span>
+              </div>
+            </a>
+          </li>
+          <li class="tag-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-6.png" alt="best-sell-product">
+                <span>人氣 No.1</span>
+              </div>
+            </a>
+          </li>
+          <li class="tag-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-4.png" alt="best-sell-product">
+                <span>人氣 No.1</span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </div>
+  <section class="py-48 py-md-24 banner-co-container">
+    <div class=" d-flex jcc aic banner-co">
+      <div class="d-flex jcc aic mb-16 display-2">
+        <span class="mb-md-8">URBNSTEP</span><span class="mb-md-8 primary-300">x</span><span>Kevin Chen</span>
+      </div>
+      <h2 class="mb-32 mb-md-24" >跨界聯名，限量發售</h2>
+      <div class="d-flex jcc aic mb-48 mb-md-32 subtitle">
+        <span class="mb-md-4">新銳漫畫家 Kevin Chen 親自操刀設計</span><span class="md-none">，</span><span>街頭能量全面引爆！</span>
+      </div>
+      <a class="btn-large" href="#">立即搶購</a>
+      <img class="star-img" src="/assets/images/desktop/star.svg" alt="star">
+      <img class="sparkle-img" src="/assets/images/desktop/sparkle.svg" alt="sparkle">
+    </div>
+    
+  </section>
+  <div class="container container-index">
+    <main>
+      <section class="py-64 py-md-40 series">
+        <h2 class="mb-16">依系列選購</h2>
+        <ul class="row">
+          <li class="mb-md-12 square-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-6.png" alt="series-shoes">
+                <div class="d-flex jcc aic tag">
+                  <h3 class="mb-8">URBN RUNNER</h3>
+                  <h4>慢跑系列</h4>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="mb-md-12 square-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-11.png" alt="series-shoes">
+                <div class="d-flex jcc aic tag">
+                  <h3 class="mb-8">STREETMODE</h3>
+                  <h4>滑板系列</h4>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="square-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-9.png" alt="series-shoes">
+                <div class="d-flex jcc aic tag">
+                  <h3 class="mb-8">CHUNK DISTRICT</h3>
+                  <h4>厚底系列</h4>
+                </div>
+              </div>
+            </a>
+          </li>
+          <li class="square-product-card">
+            <a href="#">
+              <div class="img-container">
+                <img src="/assets/images/desktop/product-10.png" alt="series-shoes">
+                <div class="d-flex jcc aic tag">
+                  <h3 class="mb-8">COLLAB ZONE</h3>
+                  <h4>聯名企劃</h4>
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <section class="mb-48 mb-md-24 py-64 py-md-40 gallery">
+      <h2 class="mb-16">穿搭靈感</h2>
+      <div class="row">
+        <div class="d-flex col-4">
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-1.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-2.png" alt="product-shows">
+          </div>
+          <div class="col-12">
+            <img src="/assets/images/desktop/inspiration-3.png" alt="product-shows">
+          </div>
+        </div>
+        <div class="d-flex col-4">
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-4.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-5.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-6.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-7.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-8.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-9.png" alt="product-shows">
+          </div>
+        </div>
+        <div class="d-flex col-4">
+          <div class="col-12">
+            <img src="/assets/images/desktop/inspiration-10.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-11.png" alt="product-shows">
+          </div>
+          <div class="col-6">
+            <img src="/assets/images/desktop/inspiration-12.png" alt="product-shows">
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
 
   <%- include("./layout/cta"); -%>
 
