--- a/product-detail.html
+++ b/product-detail.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 字型載入 -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
 <!-- 字型載入結束 -->
 <!-- icon 載入 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <!-- icon 載入結束 -->  <title>產品詳情頁</title>
-  <script type="module" crossorigin src="/assignment-2/assets/main-DPVfCV5-.js"></script>
-  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-CUsWb7u7.css">
+  <script type="module" crossorigin src="/assignment-2/assets/main-GtaW08af.js"></script>
+  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-Byuk2som.css">
 </head>
 <body>
   <nav class="nav">
@@ -61,7 +61,7 @@
             <span class="mr-12 mr-md-8">/</span>
             <a class="mr-12 mr-md-8 breadcrumb-link" href="#">滑板鞋</a>
             <span class="mr-12 mr-md-8">/</span>
-            <a href="#">Platform 404</a>
+            <p>Platform 404</p>
           </nav>
           <h2 class="mb-16 mb-md-12">Platform 404</h2>
           <h5 class="mb-16 mb-md-12 d-flex aic">NT$2,600<span class="original-price">NT$3,200</span></h5>
