--- a/product-list.html
+++ b/product-list.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 字型載入 -->
-<link rel="preconnect" href="https://fonts.googleapis.com">
+<!-- <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Tourney:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"> -->
 <!-- 字型載入結束 -->
 <!-- icon 載入 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <!-- icon 載入結束 -->  <title>產品列表頁</title>
-  <script type="module" crossorigin src="/assignment-2/assets/main-DPVfCV5-.js"></script>
-  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-CUsWb7u7.css">
+  <script type="module" crossorigin src="/assignment-2/assets/main-GtaW08af.js"></script>
+  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-Byuk2som.css">
 </head>
 <body>
   <nav class="nav">
@@ -44,7 +44,7 @@
       <span class="mr-12 mr-md-8">/</span>
       <a class="mr-12  mr-md-8 breadcrumb-link" href="/">女鞋</a>
       <span class="mr-12  mr-md-8">/</span>
-      <a href="#">所有商品</a>
+      <p>所有商品</p>
     </nav>
     <h3 class="mb-24 mb-md-12">所有商品</h3>
     <main class="row jcsb">
