--- a/pages/product-list.html
+++ b/pages/product-list.html
@@ -20,7 +20,7 @@
     </nav>
     <h3 class="mb-24 mb-md-12">所有商品</h3>
     <main class="row jcsb">
-      <div class="col-2">
+      <div class="mr-12 col-2">
         <ul class="main-menu">
           <li class="mb-16 main-menu-item"><a href="#">所有商品</a></li>
           <li class="mb-16 main-menu-item"><a href="#">慢跑鞋</a></li>
