--- a/index.html
+++ b/index.html
@@ -12,29 +12,26 @@
 <!-- icon 載入 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <!-- icon 載入結束 -->  <title>index</title>
-  <script type="module" crossorigin src="/assignment-2/assets/main-GtaW08af.js"></script>
-  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-Byuk2som.css">
+  <script type="module" crossorigin src="/assignment-2/assets/main-AWkkaY1Z.js"></script>
+  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-BJNy9MvC.css">
 </head>
 <body>
   <nav class="nav">
     <div class="container">
         <div class="row aic">
-            <section class="mr-auto col-10 d-flex aic">
+            <div class="mr-auto col-10 d-flex aic">
                 <a href="index.html" class="mr-48 logo">
-                    <!-- logo 圖片 連結到首頁 index -->
                     <img src="/assignment-2/assets/logo-RhEl2I3y.svg" alt="logo-image">
                 </a>
                 <ul class="d-flex nav-menu">
                     <li class="mr-40"><a href="product-list.html">商品列表</a></li>
-                    <!-- 連結到 產品列表頁面 -->
                     <li><a href="brand-intro.html">品牌故事</a></li>
-                    <!-- 連結到 品牌介紹頁面 -->
                 </ul>
-            </section>
-            <aside class="col-2 d-flex jce aic avatar">
+            </div>
+            <div class="col-2 d-flex jce aic avatar">
                 <a href="#"><i class="bi bi-person"></i></a>
                 <!-- 連結到 登入頁面 -->
-            </aside>
+            </div>
         </div>
     </div>
 </nav>
@@ -252,21 +249,18 @@
             <nav class="mb-24 footer-nav">
                 <section class="d-flex aic row">
                     <a href="index.html" class="mr-auto col-10 logo">
-                    <!-- logo 圖片 連結到首頁 index -->
                         <img src="/assignment-2/assets/logo-RhEl2I3y.svg" alt="logo-image">
                     </a>
                     <ul class="d-flex nav-menu">
                         <li class="col-1 mr-40"><a href="product-list.html">商品列表</a></li>
-                        <!-- 連結到 產品列表頁面 -->
                         <li class="col-1"><a href="brand-intro.html">品牌故事</a></li>
-                        <!-- 連結到 品牌介紹頁面 -->
                     </ul>
                 </section>
             </nav>
-            <footer class="footer-copyright">
+            <section class="footer-copyright">
                 <p class="mb-4">Copyright ©2025 URBNSTYLE</p>
                 <p>All Rights Reserved.</p>
-            </footer>
+            </section>
         </div>
     </div>
 </footer>
