--- a/product-detail.html
+++ b/product-detail.html
@@ -12,29 +12,26 @@
 <!-- icon 載入 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <!-- icon 載入結束 -->  <title>產品詳情頁</title>
-  <script type="module" crossorigin src="/assignment-2/assets/main-GtaW08af.js"></script>
-  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-Byuk2som.css">
+  <script type="module" crossorigin src="/assignment-2/assets/main-AWkkaY1Z.js"></script>
+  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-BJNy9MvC.css">
 </head>
 <body>
   <nav class="nav">
     <div class="container">
         <div class="row aic">
-            <section class="mr-auto col-10 d-flex aic">
+            <div class="mr-auto col-10 d-flex aic">
                 <a href="index.html" class="mr-48 logo">
-                    <!-- logo 圖片 連結到首頁 index -->
                     <img src="/assignment-2/assets/logo-RhEl2I3y.svg" alt="logo-image">
                 </a>
                 <ul class="d-flex nav-menu">
                     <li class="mr-40"><a href="product-list.html">商品列表</a></li>
-                    <!-- 連結到 產品列表頁面 -->
                     <li><a href="brand-intro.html">品牌故事</a></li>
-                    <!-- 連結到 品牌介紹頁面 -->
                 </ul>
-            </section>
-            <aside class="col-2 d-flex jce aic avatar">
+            </div>
+            <div class="col-2 d-flex jce aic avatar">
                 <a href="#"><i class="bi bi-person"></i></a>
                 <!-- 連結到 登入頁面 -->
-            </aside>
+            </div>
         </div>
     </div>
 </nav>
@@ -42,7 +39,7 @@
     <main class="mb-112 mb-md-40 row">
       <div class="mb-md-24 col-7">
         <ul class="d-flex gap-8 gap-md-0 product-detail-images">
-          <li class="image-display"><img src="/assignment-2/assets/image-gISZDASy.png" alt="shoes-detail-image"></li>
+          <li><img src="/assignment-2/assets/image-gISZDASy.png" alt="shoes-detail-image"></li>
           <li><img src="/assignment-2/assets/image-1-Dhb3Q1-B.png" alt="shoes-detail-image"></li>
           <li><img src="/assignment-2/assets/image-2-CupMQKkJ.png" alt="shoes-detail-image"></li>
           <li><img src="/assignment-2/assets/image-3-C52UWubL.png" alt="shoes-detail-image"></li>
@@ -71,27 +68,28 @@
             <p class="mb-8">顏色</p>
             <ul class="d-flex color-wrap">
               <li class="mr-8 color-card">
-                <img src="/assignment-2/assets/product-ByIiOSCa.png" alt="shoes-image">
-                <p>藍色</p>
+                <a href=""><img src="/assignment-2/assets/product-ByIiOSCa.png" alt="shoes-image">
+                <p>藍色</p></a>
               </li>
               <li class="color-card">
-                <img src="/assignment-2/assets/product-1-BSd-Oeai.png" alt="shoes-image">
-                <p>卡其色</p>
+                <a href="#"><img src="/assignment-2/assets/product-1-BSd-Oeai.png" alt="shoes-image">
+                <p>卡其色</p></a>
+                
               </li>
             </ul>
           </section>
           <section class="mb-48 mb-md-24 size-section">
               <p class="mb-8">尺寸</p>
               <ul class="mb-8 d-flex size-wrap">
-                <li class="mr-8 mb-8 size-option">35(22.5cm)</li>
-                <li class="mr-8 mb-8 size-option">36(23.0cm)</li>
-                <li class="mr-8 mb-8 size-option">37(23.5cm)</li>
-                <li class="mr-8 mb-8 size-option">38(24.0cm)</li>
-                <li class="mr-8 mb-8 size-option">39(24.5cm)</li>
-                <li class="mr-8 mb-8 size-option">40(25.0cm)</li>
-                <li class="mr-8 size-option">41(26.0cm)</li>
-                <li class="mr-8 disabled size-option">42(26.5cm)</li>
-                <li class="mr-8 disabled size-option">43(27.0cm)</li>
+                <li class="mr-8 mb-8 size-option"><a href="#">35(22.5cm)</a></li>
+                <li class="mr-8 mb-8 size-option"><a href="#">36(23.0cm)</a></li>
+                <li class="mr-8 mb-8 size-option"><a href="#">37(23.5cm)</a></li>
+                <li class="mr-8 mb-8 size-option"><a href="">38(24.0cm)</a></li>
+                <li class="mr-8 mb-8 size-option"><a href="#">39(24.5cm)</a></li>
+                <li class="mr-8 mb-8 size-option"><a href="#">40(25.0cm)</a></li>
+                <li class="mr-8 size-option"><a href="#">41(26.0cm)</a></li>
+                <li class="mr-8 disabled size-option"><a href="#">42(26.5cm)</a></li>
+                <li class="mr-8 disabled size-option"><a href="#">43(27.0cm)</a></li>
               </ul>
               <p class="alert-text">僅剩 3 雙</p>
               <div class="product-actions"></div>
@@ -126,34 +124,38 @@
         </section>
       </div>
     </main>
-  <aside class="mb-88 mb-md-64 product-recommendation">
+    <aside class="py-48 recommendation">
       <h4 class="mb-16">你可能也喜歡...</h4>
-      <div class="swiper">
-          <ul class="d-flex swiper-wrapper">
-              <li class="swiper-slide"><a href="#">
-                  <img class="mb-12" src="/assignment-2/assets/product-2-B3VzoAng.png" alt="shoes-image">
-                  <h6 class="mb-4">VM001</h6>
-                  <p>NT$2,600</p>
-              </a></li>
-              <li class="swiper-slide"><a href="#">
-                  <img class="mb-12" src="/assignment-2/assets/product-3-AxvEbKOW.png" alt="shoes-image">
-                  <h6 class="mb-4">Melty Kiss</h6>
-                  <p>NT$4,000</p>
-              </a></li>
-              <li class="swiper-slide"><a href="#">
-                  <img class="mb-12" src="/assignment-2/assets/product-4-CqyUCYzf.png" alt="shoes-image">
-                  <h6 class="mb-4">BOOMBLOK</h6>
-                  <p>NT$3,200</p>
-              </a></li>
-              <li class="swiper-slide"><a href="#">
-                  <img class="mb-12" src="/assignment-2/assets/product-7-DJXgZGzn.png" alt="shoes-image">
-                  <h6 class="mb-4">Sugar Snap</h6>
-                  <p>NT$3,200</p>
-              </a></li>
-          </ul>
-          <div class="swiper-button-prev"><i class="bi bi-chevron-left"></i></div>
-          <div class="swiper-button-next"><i class="bi bi-chevron-right"></i></div>
-      </div>
+      <ul class="row">
+        <li class="col-3 product-card">
+          <a href="#">
+            <img class="mb-12" src="/assignment-2/assets/product-2-B3VzoAng.png" alt="shoes-image">
+            <h6 class="mb-4">VM001</h6>
+            <p>NT$2,600</p>
+          </a>
+        </li>
+        <li class="col-3 product-card">
+          <a href="#">
+            <img class="mb-12" src="/assignment-2/assets/product-3-AxvEbKOW.png" alt="shoes-image">
+            <h6 class="mb-4">Melty Kiss</h6>
+            <p>NT$4,000</p>
+          </a>
+        </li>
+        <li class="col-3 product-card">
+          <a href="#">
+            <img class="mb-12" src="/assignment-2/assets/product-4-CqyUCYzf.png" alt="shoes-image">
+            <h6 class="mb-4">BOOMBLOK</h6>
+            <p>NT$3,200</p>
+          </a>
+        </li>
+        <li class="col-3 product-card">
+          <a href="#">
+            <img class="mb-12" src="/assignment-2/assets/product-7-DJXgZGzn.png" alt="shoes-image">
+            <h6 class="mb-4">Sugar Snap</h6>
+            <p>NT$3,200</p>
+          </a>
+        </li>
+      </ul>
     </aside>
   </div>
 
@@ -169,21 +171,18 @@
             <nav class="mb-24 footer-nav">
                 <section class="d-flex aic row">
                     <a href="index.html" class="mr-auto col-10 logo">
-                    <!-- logo 圖片 連結到首頁 index -->
                         <img src="/assignment-2/assets/logo-RhEl2I3y.svg" alt="logo-image">
                     </a>
                     <ul class="d-flex nav-menu">
                         <li class="col-1 mr-40"><a href="product-list.html">商品列表</a></li>
-                        <!-- 連結到 產品列表頁面 -->
                         <li class="col-1"><a href="brand-intro.html">品牌故事</a></li>
-                        <!-- 連結到 品牌介紹頁面 -->
                     </ul>
                 </section>
             </nav>
-            <footer class="footer-copyright">
+            <section class="footer-copyright">
                 <p class="mb-4">Copyright ©2025 URBNSTYLE</p>
                 <p>All Rights Reserved.</p>
-            </footer>
+            </section>
         </div>
     </div>
 </footer>
