--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- 字型載入結束 -->
 <!-- icon 載入 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-<!-- icon 載入結束 -->  <title>index</title>
+<!-- icon 載入結束 -->  <title>首頁</title>
   <script type="module" crossorigin src="/assignment-2/assets/main-AWkkaY1Z.js"></script>
   <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-BJNy9MvC.css">
 </head>
