--- a/pages/index.html
+++ b/pages/index.html
@@ -11,8 +11,12 @@
   <%- include("./layout/nav"); -%>
 
   <div class="d-flex nav-link">
-    <a href="product-list.html">商品列表</a>
-    <a href="brand-intro.html">品牌故事</a>
+    <div class="col-md-6">
+      <a href="product-list.html">商品列表</a>
+    </div>
+    <div class="col-md-6">
+      <a href="brand-intro.html">品牌故事</a>
+    </div>
   </div>
 
   <header class="banner-cta">
