--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <!-- icon 載入 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 <!-- icon 載入結束 -->  <title>首頁</title>
-  <script type="module" crossorigin src="/assignment-2/assets/main-BZAhV6Tb.js"></script>
-  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-BFC98xjQ.css">
+  <script type="module" crossorigin src="/assignment-2/assets/main-ARCLQPuO.js"></script>
+  <link rel="stylesheet" crossorigin href="/assignment-2/assets/main-Djc3cBfy.css">
 </head>
 <body>
   <nav class="nav">
@@ -36,8 +36,12 @@
     </div>
 </nav>
   <div class="d-flex nav-link">
-    <a href="product-list.html">商品列表</a>
-    <a href="brand-intro.html">品牌故事</a>
+    <div class="col-md-6">
+      <a href="product-list.html">商品列表</a>
+    </div>
+    <div class="col-md-6">
+      <a href="brand-intro.html">品牌故事</a>
+    </div>
   </div>
 
   <header class="banner-cta">
